# chimer

./: .gitignore  README.md  docker-compose.yml
.githooks/: pre-commit
AudioRestServer.ino/: AudioRestServer.ino.ino
GateMonitor.ino/: reja_abierta_wav.h
audio/: record.sh
chimer/GateMonitor.ino/: GateMonitor.ino.ino  short_chime_atomic_wav.h
chimer/PlayRejaAbierta.ino/: PlayRejaAbierta.ino.ino
detector/: .dockerignore  .env.example  Dockerfile  app.py  calibrate.py  camera.py  capture.py  config.py  detector.py  marker.py  pyproject.toml  requirements.txt
detector/tests/: conftest.py  helpers.py  test_aggregator.py  test_classify_fixtures.py  test_marker.py  test_sequence.py
detector/tests/fixtures/: labels.json  populate_fixtures.py
detector/tools/: gate_service.py
