[project]
name = "detector"
version = "0.1.0"
description = "Gate open/closed detector: RTSP camera poller + OpenCV CV analysis + Flask REST API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.scripts]
detector = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
