[project]
name = "detector"
version = "0.1.5"
description = "Gate open/closed detector: RTSP camera poller + OpenCV CV analysis + Flask REST API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "python-dotenv>=1.0",
]

[project.scripts]
detector = "app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires live RTSP stream (deselect with -m 'not live')",
    "fixtures: requires committed fixture images in tests/fixtures/images/",
]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
